--- a/styles/reset.css
+++ b/styles/reset.css
@@ -5,7 +5,7 @@
 		0.1px 2.2px 2.5px -1.2px hsl(var(--shadow-color) / 0.09),
 		0.1px 4.4px 5px -1.9px hsl(var(--shadow-color) / 0.09),
 		0.2px 8.5px 9.6px -2.5px hsl(var(--shadow-color) / 0.09);
-		font-size: calc(14px + (16 - 14) * ((100vw - 400px) / (1920 - 400)));
+		font-size: calc(0.875rem + (1 - 0.875) * ((100vw - 25rem) / (120 - 25)));
 }
 
 *,
@@ -56,7 +56,7 @@ h6 {
 }
 
 p {
-	text-wrap: pretty;
+	text-wrap: wrap;
 }
 
 h1,
@@ -73,21 +73,21 @@ h6 {
 	isolation: isolate;
 }
 
-h1{
-	font-size:2.986rem ;
+h1 {
+	font-size: 2.986rem;
 }
-h2{
-	font-size:2.488rem;
+h2 {
+	font-size: 2.488rem;
 }
-h3{
-	font-size:2.074rem ;
+h3 {
+	font-size: 2.074rem;
 }
-h4{
-	font-size:1.728rem ;
+h4 {
+	font-size: 1.728rem;
 }
-h5{
-	font-size:1.44rem ;
+h5 {
+	font-size: 1.44rem;
 }
-h6{
-	font-size:1.2rem;
+h6 {
+	font-size: 1.2rem;
 }
