--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 	src: local("Inter"), local("Inter Regular"), url("../fonts/Inter-R.woff2") format("woff2");
 	font-weight: 400;
 	font-style: normal;
-	font-display: optional;
+	font-display: swap;
 }
 
 @font-face {
@@ -11,7 +11,7 @@
 	src: local("Inter Bold"), url("../fonts/Inter-B.woff2") format("woff2");
 	font-weight: 700;
 	font-style: normal;
-	font-display: optional;
+	font-display: swap;
 }
 
 @font-face {
@@ -19,7 +19,7 @@
 	src: local("Inter Italic"), url("../fonts/Inter-I.woff2") format("woff2");
 	font-weight: 400;
 	font-style: italic;
-	font-display: optional;
+	font-display: swap;
 }
 @font-face {
 	font-family: "Inter";
@@ -53,63 +53,170 @@
 img {
 	block-size: auto;
 	height: auto;
-	max-width: 100%;
+
 	width: 100%;
 	min-width: 0;
 	object-fit: cover;
 }
-
+p {
+	min-width: min-content;
+}
 * {
-	 outline: 1px solid black;  
+	outline: 1px solid black;
 }
 
 body {
-	
 	min-height: 100vh;
 }
-.container{
+@container sidebar (width < 160px) {
+	.sidebar-menu-1 .menu-item-wrapper,.sidebar-menu-2 .menu-item-wrapper {
+		flex-wrap: wrap;
+		justify-content: center;
+		text-align: center;
+		
+	}
+	.logo-item-wrapper{
+		flex-wrap: wrap;
+		justify-content: center;
+		text-align: center;
+	}
+	.menu-item-wrapper .icon{
+		height: 2.5em;
+	}
+	.logo .logo-item-wrapper{
+		padding-top: 0.5em;
+		gap:0.25em ;
+	}
+	.logo-item-text{
+		font-size: 1.1rem;
+	}
+}
+@container sidebar (width < 100px) {
+	.menu-item-text,.logo-item-text{
+		display: none;
+		
+	}
+	.menu-item-wrapper .icon{
+		height: 3em;
+	}
+	.logo-item-wrapper .logo-icon{
+		height: 3em;
+	}
+	
+}
+.container {
 	min-height: 100vh;
 	display: grid;
-	grid-template-columns: 200px 1fr 200px;
-	grid-template-rows: 200px 1fr 1fr;
+	grid-template-columns: minmax(70px, 14rem) minmax(500px, 1fr) minmax(300px, 300px);
+	grid-template-rows: minmax(auto, 10rem) 1fr 1fr;
 }
 
-.sidebar{
+.sidebar {
 	grid-column: 1;
 	grid-row: 1 / 4;
 	background-color: #1992d4;
 	color: white;
 	display: grid;
 	grid-template-columns: auto;
-	grid-template-rows: auto 1fr 1fr;
-	gap: 1em;
-	align-items: flex-start;
-
+	grid-template-rows: 50px auto 1fr;
+	gap: 2em;
+	align-items: start;
+	container-name: sidebar;
+	container-type: inline-size;
 }
-.sidebar-menu-1{
+.sidebar > div {
+	min-width: 0;
+}
+.sidebar-menu-1 {
 	grid-row: 2 / 3;
 	display: grid;
 	grid-template-columns: 1fr;
-	
-}
-.sidebar-menu-2{
-	display: grid;
-	grid-row: 3 / 4;
-}
-.header{
-	grid-column: 2 / -1;
-	grid-row:1;
-}
-.projects-container{
-	grid-column: 2 /3;
-	grid-row: 2  / 4;
-}
-.announcements{
-	grid-column: 2 / 3;
-	grid-row: 2 / 3;
-}
-.trending{
-	grid-column:  3 / 4;
-	grid-row: 3 / 4;
+
 }
 
+
+
+.sidebar-menu-1 > *,
+.sidebar-menu-2 > * {
+	min-width: 0;
+}
+.sidebar-menu-2 {
+	display: grid;
+	grid-row: 3 / 4;
+	container-name: sidebar;
+	container-type: inline-size;
+}
+
+.projects-container {
+	grid-column: 2 /3;
+	grid-row: 2 / 4;
+}
+.announcements {
+	grid-column: 3 / 4;
+	grid-row: 2 / 3;
+}
+.trending {
+	grid-column: 3 / 4;
+	grid-row: 3 / 4;
+}
+.logo-item-wrapper {
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-top: 1em;
+
+	gap: 0.5em;
+	font-size: 1.3rem;
+}
+.menu-item-wrapper {
+	padding: 0.4em 1rem;
+	container-name: menu-item-wrapper;
+	container-type: inline-size;
+	gap: 0.5em;
+	font-size: 1rem;
+}
+.menu-item-wrapper,
+.logo-item-wrapper {
+	display: flex;
+}
+.menu-item-text {
+	flex-grow: 1;
+	flex-shrink: 1;
+	font-weight: bold;
+	flex-basis: 80%;
+}
+.icon {
+	flex-basis: min-content;
+	flex-shrink: 0;
+	height: 1.5em;
+	object-fit: contain;
+}
+.logo-icon {
+	flex-basis: min-content;
+	flex-shrink: 0;
+	height: 1.5em;
+	object-fit: contain;
+}
+.logo-item-text {
+	flex-grow: 1;
+	flex-basis: 75%;
+	flex-shrink: 1;
+	font-weight: bold;
+	overflow-wrap: normal;
+}
+
+
+.header {
+	grid-column: 2 / -1;
+	grid-row: 1;
+	display: grid;
+}
+.header-top,.header-bottom{
+	display: flex;
+	
+}
+.header-top > * {
+	flex-grow: 1;
+}
+.header-bottom > * {
+	flex-grow: 1;
+}
