--- a/styles/style.css
+++ b/styles/style.css
@@ -60,10 +60,12 @@ p {
 	min-width: min-content;
 }
 * {
-	outline: 1px solid black;
+	/* outline: 1px solid black; */
 }
 
 body {
+	overflow: hidden; /* Sayfanın kaydırılmasını engeller */
+  height: 100%; 
 }
 @container sidebar (width < 160px) {
 	.sidebar-menu-1 .menu-item-wrapper,
@@ -99,40 +101,91 @@ body {
 	.logo-item-wrapper .logo-icon {
 		height: 3em;
 	}
+	.sidebar .sidebar-menu-1, .sidebar .sidebar-menu-2{
+		gap: clamp(1rem,0.4vw,1rem);
+	}
 }
 @container header (width < 600px) {
 	.header-top .profile-container {
 		font-size: 0.8rem;
 	}
 	.header-bottom .greet-container {
-		/* display: none; */
-		font-size: 0.8rem;
+		display: none;
+		font-size: 0.6rem;
 		text-align: center;
+		
+		
+	}
+
+	.header .header-bottom{
+		justify-content: center;
 	}
 	.header-bottom .button-container {
-		justify-content: center;
+		justify-content: space-between;
 		font-size: 0.6rem;
+		flex-grow: 1;
+		gap: 2rem;
 	}
 	.header-bottom .button-container button {
-		flex-grow: 1;
 		flex-basis: auto;
+		flex-grow: 1;
 		flex-shrink: 1;
 	}
 	.greet-text-container .greet-text{
 		text-align: center;
 	}
+	
 }
-@media (width < 715px) {
+@container announcements (height < 300px) {
+	.post:last-child{
+		display: none;
+	}
+	hr:last-of-type{
+		display: none;
+	}
+}
+@media (width < 1200px) {
 	body .container {
-		grid-template-columns: minmax(2rem, max(2rem, 8vw)) minmax(auto, 3fr) minmax(auto, 1fr);
+		grid-template-columns: 10vw 3fr 1fr;
+		
+	}
+	.container .sidebar{
+		gap: 3em;
+	}
+	.container .projects-container{
+		grid-column: 2/5;
+	}
+	.container .announcements{
+		display: none;
+	}
+	.container .trending{
+		display: none;
+	}
+	
+}
+@media (width < 768px) {
+	body .container {
+		grid-template-columns: max(3rem, 8vw) 3fr 1fr;
+		grid-template-rows: clamp(6rem, 9vw, 10rem) 1fr 1fr;
+	}
+	.container .sidebar{
+		gap: 4em;
+	}
+	.container .header{
+		grid-template-rows: 50% 50%;
+	}
+	.sidebar-menu-2{
+		padding-bottom: 3rem;
 	}
 }
 
+
 .container {
-	min-height: 100vh;
+	height: 100dvh;
+	
 	min-width: 100vw;
 	display: grid;
-	grid-template-columns: minmax(2rem, max(2rem, 14vw)) minmax(auto, 3fr) minmax(auto, 1fr);
+	grid-template-columns: min(14rem, 14vw)  3fr min(24rem, 20vw);
 	grid-template-rows: clamp(8rem, 9vw, 10rem) 1fr 1fr;
 }
 
@@ -143,7 +196,7 @@ body {
 	color: white;
 	display: grid;
 	grid-template-columns: auto;
-	grid-template-rows: 50px auto 1fr;
+	grid-template-rows: 0.1fr 0.3fr 1fr;
 	gap: 2em;
 	align-items: start;
 	container-name: sidebar;
@@ -156,6 +209,7 @@ body {
 	grid-row: 2 / 3;
 	display: grid;
 	grid-template-columns: 1fr;
+	
 }
 
 .sidebar-menu-1 > *,
@@ -236,6 +290,7 @@ body {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 40% 60%;
+	z-index: 2;
 }
 .header-top,
 .header-bottom {
@@ -245,8 +300,8 @@ body {
 }
 .header-top,
 .header-bottom {
-	gap: clamp(0.4rem, 2%, 2rem);
-	padding: 0.5rem clamp(0.5rem, 2%, 3rem);
+	gap: clamp(0.4rem, 1.5vw, 2rem);
+	padding: 0.5rem clamp(0.5rem, 1.5vw, 3rem);
 }
 .header-container {
 	display: flex;
@@ -268,7 +323,7 @@ body {
 	font-size: 1.1rem;
 	justify-content: flex-end;
 	align-items: center;
-	gap: clamp(0.5rem, 3%, 1rem);
+	gap: clamp(0.5rem, 1vw, 1.5rem);
 }
 .search-input {
 	flex-grow: 1;
@@ -298,7 +353,7 @@ body {
 	flex-basis: auto;
 	font-weight: bold;
 }
-/* burası */
+/* -------------------------------------------------------------- */
 .header-top {
 	padding-bottom: 0;
 	padding-top: 0;
@@ -352,4 +407,89 @@ button {
 	min-width: 3rem;
 	padding: clamp(0.6em, 0.4vw, 1em) 0;
 }
-/* burası */
+/* -------------------------------------------------------------- */
+.trending,.announcements,.projects-container,.sidebar{
+	overflow: auto;
+}
+.label{
+	font-weight: bold;
+	font-size: var(--font-size-xl);
+	color: black;
+}
+/* -------------------------------------------------------------- */
+.projects-container{
+	background-color: #e2e8f0;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto 1fr;
+	padding-top: 2rem;
+	gap:clamp(0.5rem, 0.5vw, 1rem);
+	z-index: 1;
+	padding-left: clamp(0.5rem, 1.5vw, 3rem);
+	padding-bottom: 2rem;
+	padding-right:clamp(0.5rem, 1.5vw, 3rem) ;
+}
+.projects{
+	display: grid;
+	
+	grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+	grid-auto-rows: 250px;
+	gap: var(--gap-main);
+	justify-content: center;
+}
+.card{
+	border: 1px solid black;
+}
+.announcements{
+	padding-top: 2rem;
+	padding-bottom: 1rem;
+}
+.announcements,.trending{
+	background-color: #e2e8f0;
+	display: flex;
+	flex-direction: column;
+	
+	font-size: 0.85rem;
+	color: #424242;
+	padding-right: clamp(0.5rem, 1.5vw, 3rem);
+	min-height: 0;
+	gap:clamp(0.5rem, 0.5vw, 1rem);
+	
+}
+.post{
+	display: flex;
+	flex-direction: column;
+	flex-basis: 0;
+	
+	justify-content: center;
+	flex-grow: 1;
+	min-height: 0;
+}
+.announcements-card,.trending-card{
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	border-radius: 1rem;
+	padding: 0.5rem clamp(1rem, 1.5vw, 3rem);
+	flex-grow: 1;
+	justify-content: space-around;
+	box-shadow: var(--shadow-elevation-medium);
+	container-name: announcements;
+	container-type: size;
+	min-height: 0;
+	z-index: 1;
+}
+.announcements-card-header,.trending-card-header{
+	font-weight: bold;
+	font-size: 0.9rem;
+	color: black;
+	
+}
+.announcements-card-text{
+	
+	min-height: 0;
+}
+.trending{
+	padding-bottom: 2rem;
+	padding-top: 1rem;
+}
