--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,16 @@ p {
 
 body {
 	overflow: hidden; /* Sayfanın kaydırılmasını engeller */
-  height: 100%; 
+	height: 100%;
+}
+.icon-x {
+	display: none;
+}
+.icon-skeleton {
+	display: flex;
+	flex-grow: 1;
+	flex-basis: 30%;
+	justify-content: center;
 }
 @container sidebar (width < 160px) {
 	.sidebar-menu-1 .menu-item-wrapper,
@@ -101,8 +110,9 @@ body {
 	.logo-item-wrapper .logo-icon {
 		height: 3em;
 	}
-	.sidebar .sidebar-menu-1, .sidebar .sidebar-menu-2{
-		gap: clamp(1rem,0.4vw,1rem);
+	.sidebar .sidebar-menu-1,
+	.sidebar .sidebar-menu-2 {
+		gap: clamp(1rem, 0.4vw, 1rem);
 	}
 }
 @container header (width < 600px) {
@@ -113,11 +123,9 @@ body {
 		display: none;
 		font-size: 0.6rem;
 		text-align: center;
-		
-		
 	}
 
-	.header .header-bottom{
+	.header .header-bottom {
 		justify-content: center;
 	}
 	.header-bottom .button-container {
@@ -131,61 +139,76 @@ body {
 		flex-grow: 1;
 		flex-shrink: 1;
 	}
-	.greet-text-container .greet-text{
+	.greet-text-container .greet-text {
 		text-align: center;
 	}
-	
 }
 @container announcements (height < 250px) {
-	.post:last-child{
+	.post:last-child {
 		display: none;
 	}
-	hr:last-of-type{
+	hr:last-of-type {
 		display: none;
 	}
 }
 @media (width < 1200px) {
 	body .container {
 		grid-template-columns: 10vw 3fr 1fr;
-		
 	}
-	.container .sidebar{
+	.container .sidebar {
 		gap: 3em;
 	}
-	.container .projects-container{
+	.container .projects-container {
 		grid-column: 2/5;
 	}
-	.container .announcements{
+	.container .announcements {
 		display: none;
 	}
-	.container .trending{
+	.container .trending {
 		display: none;
 	}
-	
 }
+/* bu denemedir */
+@media (width < 1000px) {
+	.container .header {
+		grid-column-start: 1;
+	}
+	.container .projects-container {
+		grid-column-start: 1;
+	}
+	.container .sidebar {
+		display: none;
+	}
+	.icon-x {
+		display: flex;
+		flex-basis: min-content;
+		flex-shrink: 0;
+		height: 1.5em;
+	}
+}
+/* bu denemedir */
 @media (width < 1000px) {
 	body .container {
 		grid-template-columns: max(3rem, 8vw) 3fr 1fr;
 		grid-template-rows: clamp(6rem, 9vw, 10rem) 1fr 1fr;
 	}
-	.container .sidebar{
+	.container .sidebar {
 		gap: 4em;
 	}
-	.container .header{
+	.container .header {
 		grid-template-rows: 50% 50%;
 	}
-	.sidebar-menu-2{
+	.sidebar-menu-2 {
 		padding-bottom: 3rem;
 	}
 }
 
-
 .container {
 	height: 100dvh;
 	width: 100dvw;
-	min-width: 100vw;
+
 	display: grid;
-	grid-template-columns: min(13rem, 14vw)  3fr min(20rem, 20vw);
+	grid-template-columns: min(13rem, 14vw) 3fr min(20rem, 20vw);
 	grid-template-rows: clamp(7rem, 7vw, 9rem) 1fr 1fr;
 }
 
@@ -209,7 +232,6 @@ body {
 	grid-row: 2 / 3;
 	display: grid;
 	grid-template-columns: 1fr;
-	
 }
 
 .sidebar-menu-1 > *,
@@ -239,7 +261,7 @@ body {
 	padding-left: clamp(0.4rem, 5%, 1rem);
 	padding-right: clamp(0.4rem, 5%, 1rem);
 	padding-top: 1em;
-
+	width: 100%;
 	gap: 0.5em;
 	font-size: 1.3rem;
 }
@@ -379,20 +401,20 @@ body {
 	flex-basis: auto;
 	font-weight: bold;
 }
-.greet-text-container{
+.greet-text-container {
 	flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis:auto;
+	flex-shrink: 1;
+	flex-basis: auto;
 }
 .button-container {
 	align-items: center;
 	flex-grow: 0;
 	min-width: 0;
-	
+
 	gap: clamp(8px, 4%, 10rem);
 	flex-basis: clamp(8rem, 60%, 30rem);
 	flex-shrink: 1;
-	
+
 	font-size: 0.8rem;
 }
 button {
@@ -408,64 +430,68 @@ button {
 	padding: clamp(0.6em, 0.4vw, 1em) 0;
 }
 /* -------------------------------------------------------------- */
-.trending,.announcements,.projects-container,.sidebar{
+.trending,
+.announcements,
+.projects-container,
+.sidebar {
 	overflow: auto;
 }
-.label{
+.label {
 	font-weight: bold;
 	font-size: var(--font-size-xl);
 	color: black;
 }
 /* -------------------------------------------------------------- */
-.projects-container{
+.projects-container {
 	background-color: #e2e8f0;
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: auto 1fr;
 	padding-top: 2rem;
-	gap:clamp(0.5rem, 0.5vw, 1rem);
+	gap: clamp(0.5rem, 0.5vw, 1rem);
 	z-index: 1;
 	padding-left: clamp(0.5rem, 1.5vw, 3rem);
 	padding-bottom: 2rem;
-	padding-right:clamp(0.5rem, 1.5vw, 3rem) ;
+	padding-right: clamp(0.5rem, 1.5vw, 3rem);
 }
-.projects{
+.projects {
 	display: grid;
-	
-	grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	grid-auto-rows: 200px;
 	gap: var(--gap-main);
 	justify-content: center;
 }
-.card{
+.card {
 	border: 1px solid black;
 }
-.announcements{
+.announcements {
 	padding-top: 2rem;
 	padding-bottom: 1rem;
 }
-.announcements,.trending{
+.announcements,
+.trending {
 	background-color: #e2e8f0;
 	display: flex;
 	flex-direction: column;
-	
+
 	font-size: 0.7rem;
 	color: #424242;
 	padding-right: clamp(0.5rem, 1.5vw, 3rem);
 	min-height: 0;
-	gap:clamp(0.5rem, 0.5vw, 1rem);
-	
+	gap: clamp(0.5rem, 0.5vw, 1rem);
 }
-.post{
+.post {
 	display: flex;
 	flex-direction: column;
 	flex-basis: 0;
-	
+
 	justify-content: center;
 	flex-grow: 1;
 	min-height: 0;
 }
-.announcements-card,.trending-card{
+.announcements-card,
+.trending-card {
 	background-color: white;
 	display: flex;
 	flex-direction: column;
@@ -479,17 +505,16 @@ button {
 	min-height: 0;
 	z-index: 1;
 }
-.announcements-card-header,.trending-card-header{
+.announcements-card-header,
+.trending-card-header {
 	font-weight: bold;
 	font-size: 0.8rem;
 	color: black;
-	
 }
-.announcements-card-text{
-	
+.announcements-card-text {
 	min-height: 0;
 }
-.trending{
+.trending {
 	padding-bottom: 2rem;
 	padding-top: 1rem;
 }
